# AAP_project

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  cipher.h  cipher_affine.cpp  cipher_affine_recurrent.cpp  cipher_classical.cpp  cipher_gamma.cpp  cipher_utils.cpp  ciphers.hpp  crypto_utils.cpp  crypto_utils.hpp  hill.cpp  language_model.cpp  language_model.hpp  main.cpp  permutation.cpp  recurrent_hill.cpp  simple_substitution.cpp  test_cipher.cpp  test_classical.cpp  vernam.cpp  vigenere.cpp
docs/html/: annotated.html  annotated_dup.js  cipher_8h.html  cipher_8h.js  cipher_8h_source.html  cipher__affine_8cpp.html  cipher__affine_8cpp.js  cipher__affine__recurrent_8cpp.html  cipher__affine__recurrent_8cpp.js  cipher__classical_8cpp.html  cipher__classical_8cpp.js  cipher__gamma_8cpp.html  cipher__gamma_8cpp.js  cipher__utils_8cpp.html  cipher__utils_8cpp.js  ciphers_8hpp.html  ciphers_8hpp.js  ciphers_8hpp_source.html  classcrypto_1_1CipherError-members.html  classcrypto_1_1CipherError.html  classcrypto_1_1CipherError.js  classcrypto_1_1CryptanalysisError-members.html  classcrypto_1_1CryptanalysisError.html  classcrypto_1_1CryptanalysisError.js  classcrypto_1_1HillCipher-members.html  classcrypto_1_1HillCipher.html  classcrypto_1_1HillCipher.js  classcrypto_1_1InvalidInputError-members.html  classcrypto_1_1InvalidInputError.html  classcrypto_1_1InvalidInputError.js  classcrypto_1_1InvalidKeyError-members.html  classcrypto_1_1InvalidKeyError.html  classcrypto_1_1InvalidKeyError.js  classcrypto_1_1LanguageModel-members.html  classcrypto_1_1LanguageModel.html  classcrypto_1_1LanguageModel.js  classcrypto_1_1Matrix-members.html  classcrypto_1_1Matrix.html  classcrypto_1_1Matrix.js  classcrypto_1_1MatrixError-members.html  (+58 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_4.js  (+35 more)
